--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>The Infinity AI</h1>
+        (Developed by Akshit Sharma 12 A3)
         <p>Ask me anything about the event!</p>
         <div class="input-area">
             <input type="text" id="questionInput" placeholder="e.g., What is the dress code?">
