--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button onclick="toggleDarkMode()">Dark Mode</button>
         </div>
         <p class="developer-credit">Developed by Akshit Sharma, 12 'A3'</p>
+        <p class="developer-credit">(The First response might take upto 50 seconds.)</p>
     </div>
     <script src="script.js"></script>
 </body>
